Blender 4.0.2 fails to compile with wayland enabled due to libdecor #115878

Closed
opened 2023-12-07 09:26:53 +01:00 by Timo Gurr · 1 comment
Contributor

System Information
Operating system: Linux
Graphics card: Intel iGPU

Blender Version
Broken: 4.0.2
Worked: 3.6.5 (with libdecor 0.1.1)

Short description of error

[  0%] Building CXX object intern/ghost/CMakeFiles/bf_intern_ghost.dir/intern/GHOST_WindowWayland.cc.o
cd /var/tmp/paludis/build/media-gfx-blender-4.0.2/work/build/intern/ghost && /usr/bin/x86_64-pc-linux-gnu-c++ -DHAVE_EXECINFO_H -DHAVE_MEMFD_CREATE -DHAVE_POLL -DNDEBUG -DPREFIX=\"/usr/x86_64-pc-linux-gnu\" -DWITH_ASSERT_ABORT -DWITH_GHOST_WAYLAND -DWITH_GHOST_WAYLAND_DBUS -DWITH_GHOST_WAYLAND_LIBDECOR -DWITH_GHOST_X11 -DWITH_OPENGL_BACKEND -DWITH_X11_XF86VMODE -DWITH_X11_XFIXES -DWITH_X11_XINPUT -DWITH_XDND -DWITH_XF86KEYSYM -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -D__LITTLE_ENDIAN__ -D__MMX__ -D__SSE2__ -D__SSE__ -I/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/intern/ghost -I/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/intern/clog -I/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/source/blender/imbuf -I/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/extern/xdnd -I/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/source/blender/blenlib -I/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/source/blender/makesdna -I/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/build/source/blender/makesdna/intern -isystem /usr/x86_64-pc-linux-gnu/include/dbus-1.0 -isystem /usr/x86_64-pc-linux-gnu/lib/dbus-1.0/include -isystem /usr/x86_64-pc-linux-gnu/include/libdecor-0 -isystem /var/tmp/paludis/build/media-gfx-blender-4.0.2/work/build/intern/ghost/libwayland -Wuninitialized -Wredundant-decls -Wall -Wno-invalid-offsetof -Wno-sign-compare -Wlogical-op -Winit-self -Wmissing-include-dirs -Wno-div-by-zero -Wtype-limits -Werror=return-type -Wno-char-subscripts -Wno-unknown-pragmas -Wpointer-arith -Wunused-parameter -Wwrite-strings -Wundef -Wcomma-subscript -Wformat-signedness -Wrestrict -Wno-suggest-override -Wuninitialized -Wno-stringop-overread -Wno-stringop-overflow -Wimplicit-fallthrough=5 -Wundef -Wmissing-declarations -march=native -O2 -pipe -fopenmp -msse -pipe -fPIC -funsigned-char -fno-strict-aliasing -ffp-contract=off -msse2 -fmacro-prefix-map="/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/"="" -fmacro-prefix-map="/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/build/"="" -Wno-maybe-uninitialized -O2 -DNDEBUG -std=c++17 -fdiagnostics-color=always -MD -MT intern/ghost/CMakeFiles/bf_intern_ghost.dir/intern/GHOST_WindowWayland.cc.o -MF CMakeFiles/bf_intern_ghost.dir/intern/GHOST_WindowWayland.cc.o.d -o CMakeFiles/bf_intern_ghost.dir/intern/GHOST_WindowWayland.cc.o -c /var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/intern/ghost/intern/GHOST_WindowWayland.cc
/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/intern/ghost/intern/GHOST_WindowWayland.cc: In function 'void libdecor_frame_handle_configure(libdecor_frame*, libdecor_configuration*, void*)':
/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/intern/ghost/intern/GHOST_WindowWayland.cc:1138:7: error: 'libdecor_frame_get_content_width' was not declared in this scope; did you mean 'libdecor_frame_get_min_content_size'?
 1138 |       libdecor_frame_get_content_width(frame),
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |       libdecor_frame_get_min_content_size

Error:
  * In program cave perform install --hooks --managed-output --output-exclusivity with-others =media-gfx/blender-4.0.2:0::media --destination installed --replacing =media-gfx/blender-4.0.0:0::installed --x-of-y 1 of 1:
  * When installing 'media-gfx/blender-4.0.2:0::media' replacing { 'media-gfx/blender-4.0.0:0::installed' }:
  * When running an ebuild command on 'media-gfx/blender-4.0.2:0::media':
  * Install failed for 'media-gfx/blender-4.0.2:0::media' (paludis::ActionFailedError)

make[2]: Leaving directory '/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/build'
make[1]: Leaving directory '/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/build'

/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/intern/ghost/intern/GHOST_WindowWayland.cc:1139:7: error: 'libdecor_frame_get_content_height' was not declared in this scope; did you mean 'libdecor_frame_get_min_content_size'?
 1139 |       libdecor_frame_get_content_height(frame),
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |       libdecor_frame_get_min_content_size
make[2]: *** [intern/ghost/CMakeFiles/bf_intern_ghost.dir/build.make:522: intern/ghost/CMakeFiles/bf_intern_ghost.dir/intern/GHOST_WindowWayland.cc.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:3036: intern/ghost/CMakeFiles/bf_intern_ghost.dir/all] Error 2
make: *** [Makefile:166: all] Error 2

Exact steps for others to reproduce the error

  1. Install libdecor 0.2.0 or 0.2.1
  2. Try to build blender 4.x with wayland & libdecor enabled: -DWITH_GHOST_WAYLAND_LIBDECOR:BOOL=TRUE

** Full build.log**
Attached.

**System Information** Operating system: Linux Graphics card: Intel iGPU **Blender Version** Broken: 4.0.2 Worked: 3.6.5 (with libdecor 0.1.1) **Short description of error** ``` [ 0%] Building CXX object intern/ghost/CMakeFiles/bf_intern_ghost.dir/intern/GHOST_WindowWayland.cc.o cd /var/tmp/paludis/build/media-gfx-blender-4.0.2/work/build/intern/ghost && /usr/bin/x86_64-pc-linux-gnu-c++ -DHAVE_EXECINFO_H -DHAVE_MEMFD_CREATE -DHAVE_POLL -DNDEBUG -DPREFIX=\"/usr/x86_64-pc-linux-gnu\" -DWITH_ASSERT_ABORT -DWITH_GHOST_WAYLAND -DWITH_GHOST_WAYLAND_DBUS -DWITH_GHOST_WAYLAND_LIBDECOR -DWITH_GHOST_X11 -DWITH_OPENGL_BACKEND -DWITH_X11_XF86VMODE -DWITH_X11_XFIXES -DWITH_X11_XINPUT -DWITH_XDND -DWITH_XF86KEYSYM -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -D__LITTLE_ENDIAN__ -D__MMX__ -D__SSE2__ -D__SSE__ -I/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/intern/ghost -I/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/intern/clog -I/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/source/blender/imbuf -I/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/extern/xdnd -I/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/source/blender/blenlib -I/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/source/blender/makesdna -I/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/build/source/blender/makesdna/intern -isystem /usr/x86_64-pc-linux-gnu/include/dbus-1.0 -isystem /usr/x86_64-pc-linux-gnu/lib/dbus-1.0/include -isystem /usr/x86_64-pc-linux-gnu/include/libdecor-0 -isystem /var/tmp/paludis/build/media-gfx-blender-4.0.2/work/build/intern/ghost/libwayland -Wuninitialized -Wredundant-decls -Wall -Wno-invalid-offsetof -Wno-sign-compare -Wlogical-op -Winit-self -Wmissing-include-dirs -Wno-div-by-zero -Wtype-limits -Werror=return-type -Wno-char-subscripts -Wno-unknown-pragmas -Wpointer-arith -Wunused-parameter -Wwrite-strings -Wundef -Wcomma-subscript -Wformat-signedness -Wrestrict -Wno-suggest-override -Wuninitialized -Wno-stringop-overread -Wno-stringop-overflow -Wimplicit-fallthrough=5 -Wundef -Wmissing-declarations -march=native -O2 -pipe -fopenmp -msse -pipe -fPIC -funsigned-char -fno-strict-aliasing -ffp-contract=off -msse2 -fmacro-prefix-map="/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/"="" -fmacro-prefix-map="/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/build/"="" -Wno-maybe-uninitialized -O2 -DNDEBUG -std=c++17 -fdiagnostics-color=always -MD -MT intern/ghost/CMakeFiles/bf_intern_ghost.dir/intern/GHOST_WindowWayland.cc.o -MF CMakeFiles/bf_intern_ghost.dir/intern/GHOST_WindowWayland.cc.o.d -o CMakeFiles/bf_intern_ghost.dir/intern/GHOST_WindowWayland.cc.o -c /var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/intern/ghost/intern/GHOST_WindowWayland.cc /var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/intern/ghost/intern/GHOST_WindowWayland.cc: In function 'void libdecor_frame_handle_configure(libdecor_frame*, libdecor_configuration*, void*)': /var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/intern/ghost/intern/GHOST_WindowWayland.cc:1138:7: error: 'libdecor_frame_get_content_width' was not declared in this scope; did you mean 'libdecor_frame_get_min_content_size'? 1138 | libdecor_frame_get_content_width(frame), | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ | libdecor_frame_get_min_content_size Error: * In program cave perform install --hooks --managed-output --output-exclusivity with-others =media-gfx/blender-4.0.2:0::media --destination installed --replacing =media-gfx/blender-4.0.0:0::installed --x-of-y 1 of 1: * When installing 'media-gfx/blender-4.0.2:0::media' replacing { 'media-gfx/blender-4.0.0:0::installed' }: * When running an ebuild command on 'media-gfx/blender-4.0.2:0::media': * Install failed for 'media-gfx/blender-4.0.2:0::media' (paludis::ActionFailedError) make[2]: Leaving directory '/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/build' make[1]: Leaving directory '/var/tmp/paludis/build/media-gfx-blender-4.0.2/work/build' /var/tmp/paludis/build/media-gfx-blender-4.0.2/work/blender-4.0.2/intern/ghost/intern/GHOST_WindowWayland.cc:1139:7: error: 'libdecor_frame_get_content_height' was not declared in this scope; did you mean 'libdecor_frame_get_min_content_size'? 1139 | libdecor_frame_get_content_height(frame), | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ | libdecor_frame_get_min_content_size make[2]: *** [intern/ghost/CMakeFiles/bf_intern_ghost.dir/build.make:522: intern/ghost/CMakeFiles/bf_intern_ghost.dir/intern/GHOST_WindowWayland.cc.o] Error 1 make[1]: *** [CMakeFiles/Makefile2:3036: intern/ghost/CMakeFiles/bf_intern_ghost.dir/all] Error 2 make: *** [Makefile:166: all] Error 2 ``` **Exact steps for others to reproduce the error** 1. Install libdecor 0.2.0 or 0.2.1 2. Try to build blender 4.x with wayland & libdecor enabled: `-DWITH_GHOST_WAYLAND_LIBDECOR:BOOL=TRUE` ** Full build.log** Attached.
Timo Gurr added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-12-07 09:26:54 +01:00
Member
cc @ideasman42
Pratik Borhade added the
Platform
Linux
Interest
Wayland
labels 2023-12-07 11:16:28 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Needs Triage
labels 2023-12-13 00:17:40 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115878
No description provided.