intern/ghost/intern/GHOST_WindowWayland.cc
@@ -66,6 +66,18 @@ struct WGL_LibDecor_Window {
   libdecor_frame *frame = nullptr;
 
   /**
+   * Store the last size applied from #libdecor_frame_interface::configure
+   * This is meant to be equivalent of calling:
+   * `libdecor_frame_get_content_width(frame)`
+   * `libdecor_frame_get_content_height(frame)`
+   * However these functions are only available via the plugin API,
+   * so they need to be stored somewhere.
+   */
+  struct {
+    int32_t size[2] = {0, 0};
+  } applied;
+
+  /**
    * Used at startup to set the initial window size
    * (before fractional scale information is available).
    */
@@ -73,6 +85,8 @@ struct WGL_LibDecor_Window {
 
   /** The window has been configured (see #xdg_surface_ack_configure). */
   bool initial_configure_seen = false;
+  /** The window size has been configured. */
+  bool initial_configure_seen_with_size = false;
   /** The window state has been configured. */
   bool initial_state_seen = false;
 };
@@ -1153,12 +1167,21 @@ static void libdecor_frame_handle_configure(libdecor_frame *frame,
   GWL_WindowFrame *frame_pending = &static_cast<GWL_Window *>(data)->frame_pending;
 
   /* Set the size. */
-  int size_decor[2] = {
-      libdecor_frame_get_content_width(frame),
-      libdecor_frame_get_content_height(frame),
-  };
   int size_next[2] = {0, 0};
   bool has_size = false;
+
+  /* Keep track the current size of window decorations (last set by this function). */
+  int size_decor[2] = {0, 0};
+
+  {
+    const GWL_Window *win = static_cast<GWL_Window *>(data);
+    const WGL_LibDecor_Window &decor = *win->libdecor;
+    if (decor.initial_configure_seen_with_size) {
+      size_decor[0] = decor.applied.size[0];
+      size_decor[1] = decor.applied.size[1];
+    }
+  }
+
   {
     GWL_Window *win = static_cast<GWL_Window *>(data);
     const int fractional_scale = win->frame.fractional_scale ?
@@ -1259,12 +1282,21 @@ static void libdecor_frame_handle_configure(libdecor_frame *frame,
     GWL_Window *win = static_cast<GWL_Window *>(data);
     WGL_LibDecor_Window &decor = *win->libdecor;
     if (has_size == false) {
+      /* Keep the current decor size. */
       size_next[0] = size_decor[0];
       size_next[1] = size_decor[1];
     }
-    libdecor_state *state = libdecor_state_new(UNPACK2(size_next));
-    libdecor_frame_commit(frame, state, configuration);
-    libdecor_state_free(state);
+    else {
+      /* Store the new size for later reuse. */
+      decor.applied.size[0] = size_next[0];
+      decor.applied.size[1] = size_next[1];
+    }
+
+    if (size_next[0] && size_next[1]) {
+      libdecor_state *state = libdecor_state_new(UNPACK2(size_next));
+      libdecor_frame_commit(frame, state, configuration);
+      libdecor_state_free(state);
+    }
 
     /* Only ever use this once, after initial creation:
      * #wp_fractional_scale_v1_listener::preferred_scale provides fractional scaling values. */
@@ -1276,6 +1308,13 @@ static void libdecor_frame_handle_configure(libdecor_frame *frame,
     else {
       if (decor.initial_state_seen == false) {
         decor.initial_state_seen = true;
+      }
+    }
+    if (decor.initial_configure_seen_with_size == false) {
+      if (is_main_thread) {
+        if (size_next[0] && size_next[1]) {
+          decor.initial_configure_seen_with_size = true;
+        }
       }
     }
   }
